<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default entries -->
    <string name="app_name">RIOT</string>
    <string name="settings">Settings</string>
    <string name="pleaseWait">Please wait &#8230;</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Main (all entries for main please insert here) -->
    <string name="filter_appointment">Appointments</string>
    <string name="filter_error">Errors</string>
    <string name="filter_warning">Warnings</string>

    <!-- Login -->
    <string name="loading">Loading&#8230;</string>
    <string name="login_incorrect">Your login was NOT correct.</string>
    <string name="login_correct">Your login was correct.</string>
    <string name="login_missing_settings">Please insert all of the connection settings.</string>
    <string name="login_missing_credentials">Please insert username and password.</string>
    <string name="login_invalid_port">The port number is invalid.</string>
    <string name="login_network_error">Network error during login.</string>

    <!-- Settings (all entries for language please insert here) -->
    <string name="language">Language</string>
    <string name="changeLanguage">Change language</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="color">Calendar color</string>
    <string name="changeColor">Change color</string>
    <string name="serverConfiguration">Server Configuration</string>
    <string name="manageConfiguration">Manage Configuration</string>
    <string name="loadConfiguration_error">Configuration could not be loaded from server</string>
    <string name="unknownName">Unknown</string>

    <!-- Account (all entries for account please insert here) -->
    <string name="acc_login">Login</string>
    <string name="acc_username">Username:</string>
    <string name="acc_password">Password:</string>
    <string name="acc_connection_settings">Display connection settings</string>
    <string name="acc_host">Host:</string>
    <string name="acc_port">Port:</string>
    <string name="acc_path">Path:</string>
    <string name="lbl_user_role">User-Role:</string>
    <string name="lbl_user_permission">User-Permissions:</string>
    <string name="user_edit">Edit User</string>

    <!-- Filter (all entries for language please insert here) -->
    <string name="desc_filter_error">Show only Error messages if selected</string>
    <string name="desc_filter_appointment">Show only Appointments if selected</string>
    <string name="desc_filter_warning">Show only Warning messages if selected</string>

    <!-- Location (all entries for language please insert here) -->
    <string name="location">Location</string>
    <string name="location_show">Show available Location</string>
    <string name="location_hide">Hide available Location</string>
    <string name="location_current_position">Current position</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_distance">Distance from current position to</string>
    <string name="location_store_distance">Notify within a range of</string>
    <string name="change_color">Change Color</string>
    <string name="DEVICE_NAME">AndroidPhone</string>

    <!-- Notification (all entries for language please insert here) -->
    <string-array name="priority">
        <item>max</item>
        <item>high</item>
        <item>default</item>
        <item>low</item>
        <item>min</item>
    </string-array>

    <string name="notification_messages_with">\u00A0Messages with\u00A0</string>
    <string name="notification_priority">\u00A0priority</string>
    <string name="user_save">Save</string>
    <string name="user_abort">Abort</string>
    <string name="processDialogExecute">Getting Data …</string>
    <string name="user_list">User List</string>
    <string name="device_list">Device List</string>
    <string name="thing_list">Thing List</string>
    <string name="user_detail">User Detail</string>
    <string name="user_back">Back</string>
    <string name="user_id">Id</string>
    <string name="user_image">Image</string>
    <string name="user_online_state">Online-State</string>
    <string name="device_name">Device Name</string>
    <string name="device_detail">Device Detail</string>
    <string name="thing_id">Id</string>
    <string name="lbl_thing_name">Thing Name</string>
    <string name="device_id">Id</string>
    <string name="thing_detail">Thing Detail</string>

<<<<<<< HEAD
<<<<<<< HEAD
    <!-- Rules -->
    <string name="rules_emptytext">You don\'t have any rules yet. Tap here to add one:</string>
    <string name="rules_btnAddRule">Add new rule</string>
    <string name="rules_chooseType">Choose rule type</string>
    <string name="rules_errorMissingName">Please specify the name!</string>
    <string name="rules_errorMissingParameter">Please specify the parameter </string>

</resources>
=======
=======
<<<<<<< HEAD
>>>>>>> RIOT-87:Android:All changes of the last commits
</resources>
=======
=======
>>>>>>> RIOT-87:Android:Exchange data with server and try to update data
=======
>>>>>>> RIOT-87:Android:Use new ThingManager to exchange data between server and
    <string name="thing_temperature">Temperatur</string>
    <string name="thing_filling">Füllstand</string>
    <string name="percent">&#37;</string>
    <string name="thing_fridge">Fridge</string>
    <string name="degreeCelsius">\u2103</string>
    <string name="degreeFahrenheit">\u2109</string>
    <string name="off">AUS</string>
    <string name="on">AN</string>
    <string name="edit">Edit</string>
    <string name="abort">Abort</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
<<<<<<< HEAD
</resources>
>>>>>>> RIOT-87:Android:All changes of the last commits
>>>>>>> RIOT-87:Android:All changes of the last commits
=======
    <string name="default_item_title">Item without a title</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
</resources>>>>>>>> RIOT-87:Android:All changes of the last commits
<<<<<<< HEAD
>>>>>>> RIOT-87:Android:Use UIHint for Things-Views
=======
=======
=======
>>>>>>> RIOT-87:Android:Exchange data with server and try to update data
    <string name="loading">Loading</string>
=======
>>>>>>> RIOT-87:Android:Use new ThingManager to exchange data between server and
    <string name="prepareData">Data are preparing</string>
    <string name="backslash">\\</string>
    <string name="thing_default">This is a Thing</string>
    <string name="default_user">This is a user</string>
    <string name="default_thing_description">This is the description of the thing</string>
    <string name="default_user_description">This is the description of the user</string>
<<<<<<< HEAD
<<<<<<< HEAD
</resources>
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> RIOT-87:Android:Get things from the server
>>>>>>> RIOT-87:Android:Get things from the server
=======
>>>>>>> RIOT-87:Android:Exchange data with server and try to update data
=======
>>>>>>> RIOT-87:Android:Do exchange data with server (also update things) and
>>>>>>> RIOT-87:Android:Do exchange data with server (also update things) and
=======
</resources>
>>>>>>> RIOT-87:Android:Use new ThingManager to exchange data between server and
=======
    <string name="user_name">Username</string>
    <string name="user_mail">E-Mail</string>
<<<<<<< HEAD
</resources>
>>>>>>> RIOT-87:Android:Add user list and user view
=======
    <string name="management_list">Management List</string>
    <string name="default_thing_subject">The Thing</string>
    <string name="default_user_subject">The user</string>
</resources>
>>>>>>> RIOT-87:Android:Changes on the structure of the management views
