<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3539"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:text="@string/language"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0080FF" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#0080FF" />

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeLanguage"
        android:textColor="#0080FF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:text="@string/color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0080FF" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#0080FF" />

    <Button
        android:id="@+id/btnColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeColor"
        android:textColor="#0080FF" />

</LinearLayout>