<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="right"
    android:layout_marginBottom="@dimen/fragment_margin_between_elements">


    <ImageButton
        android:id="@+id/detail_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_marginRight="@dimen/fragment_margin_between_elements"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/detail_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_marginRight="@dimen/fragment_margin_between_elements"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/detail_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        android:src="@android:drawable/ic_menu_save"
        android:layout_marginRight="@dimen/fragment_margin_between_elements"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/detail_button_abort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/abort"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_marginRight="@dimen/fragment_margin_between_elements"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/detail_button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/refresh"
        android:src="@android:drawable/stat_notify_sync"
        android:visibility="gone" />
</LinearLayout>